--- a/products-trade/less/products-page/_product-detail.less
+++ b/products-trade/less/products-page/_product-detail.less
@@ -100,7 +100,7 @@
 		.lightbox-content{
 			max-width: 1200px;
 			margin: 0 auto;
-			background-color: white;
+			background:none;
 			.transform(translateY(-100%));
 			.transition(all 0.3s);
 			.product-images-slider{
@@ -115,6 +115,25 @@
 				text-align: center;
 			}			
 		}
+	}
+	#video-lightbox{
+		.lightbox-actions{
+		    max-width: calc(~"100vh * 1.4");
+		    @media (min-width: 1200px){
+		    	max-width: 1200px;
+		    }
+		}
+		.lightbox-content{
+			max-width: calc(~"100vh * 1.4");
+		    @media (min-width: 1200px){
+		    	max-width: 1200px;
+		    }
+		}
+	}
+	.slider-lightbox{
+		.lightbox-content{
+			background:white;
+		}		
 	}
 	.added-to-cart{
 		position: fixed;
@@ -500,8 +519,11 @@
 				cursor: pointer;
 				position: relative;
 				img{
+					display: block;
+					line-height: 1;
 					.transition(0.3s border ease-out);
 					border: solid 1px @border-light-grey;
+					margin-bottom: 1px;
 				}
 				&.slick-current{
 					img{
@@ -908,30 +930,30 @@
 	}
 	.video-slider{
 		.video-thumbnail{
-				position: relative;
-			}
-			.play-button{
-				position: absolute;
-				top: 50%;
-				left: 50%;
+			position: relative;
+		}
+		.play-button{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			display: block;
+			margin-left: -25px;
+			margin-top: -25px;
+			svg{
+				width: 50px;
+				height: 50px;
 				display: block;
-				margin-left: -25px;
-				margin-top: -25px;
-				svg{
-					width: 50px;
-					height: 50px;
-					display: block;
-					.icon{
-						fill: white;
-					}
-					.circle{
-						fill: rgba(0,0,0,0.5);						
-					}
-					.ring{
-						fill: rgba(255,255,255,0.3);
-					}
+				.icon{
+					fill: white;
+				}
+				.circle{
+					fill: rgba(0,0,0,0.5);						
+				}
+				.ring{
+					fill: rgba(255,255,255,0.3);
 				}
 			}
+		}
 	}
 	.video-slider,
 	.product-suggestion-slider{
